 [tool.poetry]
name = "overdrive-reconcile"
version = "0.1.0"
license = "MIT"
description = "A set of scripts used for reconciliation of resources between NYPL & BPL Sierra and OverDrive Platform."
authors = ["Tomek <klingaroo@gmail.com>"]
readme = "README.md"
keywords = ["cataloging", "bibliographic records", "electronic resources"]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3"
pymarc = "^5.3"
SQLAlchemy = "^2.0"
PyYAML = "^6.0"
psycopg2 = "^2.9.3"
beautifulsoup4 = "^4.13"
requests = "^2.32"
pandas-stubs = "^2.3.0.250703"
types-beautifulsoup4 = "^4.12.0.20250516"
types-html5lib = "^1.1.11.20250708"
types-pytz = "^2025.2.0.20250516"
types-pyyaml = "^6.0.12.20250516"
types-requests = "^2.32.4.20250611"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
pytest-cov = "^3.0"
black = "^22.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
(
    /(
        \.eggs
       | \.git
       | \.hg
       | \.mypy_cache
       | \.tox
       | \.venv
       | _build
       | buck-out
       | build
       | dist
    )/
    | temp.py
)
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
	"local: locally run tests to be excluded from CI"
]
addopts = '-m "not local" --cov=overdrive_reconcile/'

[tool.coverage.run]
relative_files = true
source = ["."]
omit = ["tests/*"]