[project]
name = "overdrive-reconcile"
version = "0.2.0"
license = "MIT"
description = "A set of scripts used for reconciliation of resources between NYPL & BPL Sierra and OverDrive Platform."
authors = [{name = "Tomek",email = "klingaroo@gmail.com"}]
readme = "README.md"
keywords = ["cataloging", "bibliographic records", "electronic resources"]
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3)",
    "pymarc (>=5.3)",    
    "SQLAlchemy (>=2.0)",
    "PyYAML (>=6.0)",
    "psycopg2 (>=2.9.3)",
    "beautifulsoup4 (>=4.13)",
    "requests (>=2.32,<3.0.0)",
    "pandas-stubs (>=2.2.3.241126,<3.0.0)",
    "types-beautifulsoup4 (>=4.12.0.20250516,<5.0.0.0)",
    "types-pyyaml (>=6.0.12.20250516,<7.0.0.0)",
    "types-requests (>=2.32.4.20250611,<3.0.0.0)",
    "bookops-overdrive @ git+https://github.com/BookOps-CAT/bookops-overdrive.git"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4"
pytest-cov = "^6.2"
black = "^24.3"
pytest-mock = "^3.15"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
(
    /(
        \.eggs
       | \.git
       | \.hg
       | \.mypy_cache
       | \.tox
       | \.venv
       | _build
       | buck-out
       | build
       | dist
    )/
    | temp.py
)
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
	"local: locally run tests to be excluded from CI"
]
addopts = '-m "not local" --cov=overdrive_reconcile/'

[tool.coverage.run]
relative_files = true
source = ["."]
omit = [
    "tests/*",
    "run.py"
]

[tool.mypy]
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]